Fixed Styling for Landscape mode on mobile devices. Cleaned up some css files.

--- a/client/css/customSelector.css
+++ b/client/css/customSelector.css
@@ -3,18 +3,6 @@
     position:relative;
 
 }
-.gameSelectButton {
-    min-width:60vw;
-    min-height:8vw;
-    border:1px solid #bbbbbb;
-    display:block;
-    justify-items:center;
-    vertical-align:center;
-    cursor:pointer;
-}
-.gameSelectButton:hover {
-    background-color:#f9f9f9;
-}
 
 
 .gameSelectButtonText {
@@ -23,6 +11,14 @@
     font-size:4vw;
     width:80%;
 }
+.gameSelectButton {
+    border:1px solid #bbbbbb;
+    display:block;
+    justify-items:center;
+    vertical-align:center;
+    cursor:pointer;
+}
+
 .gameSelectButtonIconContainer {
     position:absolute;
     width:15%;
@@ -30,9 +26,17 @@
     height:100%;
     right:0;
     top:0;
-    padding-top:4vw;
-
 }
+.gameSelectOption {
+
+    border:1px solid #bbbbbb;
+    display:flex;
+    background-color:white;
+    text-align:center;
+    cursor:pointer;
+    justify-content:center;
+}
+
 .arrow{
     transition: all .5s cubic-bezier(0.83, 0, 0.17, 1);
     border: solid black;
@@ -40,6 +44,57 @@
     display: inline-block;
     padding: 1.6vw;
 }
+@media (orientation: landscape) {
+    .gameSelectButton {
+        min-width:30vw;
+        min-height:4vw;
+
+    }
+    .gameSelectButtonText {
+        font-size:2vw;
+    }
+
+    .gameSelectButtonIconContainer {
+        padding-top:2vw;
+    }
+    .arrow{
+        padding: .8vw;
+    }
+    .gameSelectOption {
+        min-width:30vw;
+        min-height:2vw;
+        font-size:2vw;
+    }
+
+
+}
+@media (orientation: portrait) {
+    .gameSelectButton {
+        min-width:60vw;
+        min-height:8vw;
+
+    }
+    .gameSelectButtonText {
+        font-size:4vw;
+    }
+    .gameSelectButtonIconContainer {
+        padding-top:4vw;
+    }
+    .arrow{
+        padding: 1.6vw;
+    }
+    .gameSelectOption {
+        min-width:60vw;
+        min-height:4vw;
+        font-size:3vw;
+    }
+}
+
+.gameSelectButton:hover {
+    background-color:#f9f9f9;
+}
+
+
 i.down {
     transform: rotate(45deg);
     -webkit-transform: rotate(45deg);
@@ -48,17 +103,7 @@ i.up {
     transform: rotate(-135deg);
     -webkit-transform: rotate(-135deg);
 }
-.gameSelectOption {
-    min-width:60vw;
-    min-height:4vw;
-    border:1px solid #bbbbbb;
-    display:flex;
-    background-color:white;
-    text-align:center;
-    cursor:pointer;
-    justify-content:center;
-    font-size:3vw;
-}
+
 .gameSelectOption:hover {
     background-color:#f9f9f9;
 }
